# invest_agent

./: .env.example  .gitignore  README.md  main.py  positions.yaml  requirements.txt  todo.md
capital_rotation_analysier/: .env.example  .gitignore  config.yaml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
capital_rotation_analysier/alerts/: 2026-06-15_P1_heartbeat_d9784e31a078.txt
capital_rotation_analysier/data/: ca_bundle.pem
capital_rotation_analysier/reports/: 2026-06-05_daily.md  2026-06-08_daily.md  2026-06-08_daily_hk.md  2026-06-09_daily.md  2026-06-09_daily_hk.md  2026-06-15_daily.md  2026-06-15_daily_hk.md
capital_rotation_analysier/scripts/: investigate_basket_inversion.py  investigate_inflation_basket.py  investigate_roo_basket.py
capital_rotation_analysier/src/rotation/: alerts.py  analogue.py  auto_commit.py  buckets.py  cli.py  compute.py  config.py  glossary.py  interpret.py  llm_interpret.py  metrics.py  pdf_report.py  pipeline.py  regime.py  report.py  report_hk.py  scheduler.py  schema.py  scorecard.py  signals.py  store.py  validate.py
capital_rotation_analysier/tests/: test_alerts_channel.py  test_analogue.py  test_auto_commit.py  test_china_macro_adapter.py  test_glossary.py  test_llm_interpret.py  test_main_script.py  test_metrics.py  test_pdf_and_implicated.py  test_regime_and_interpret.py  test_report_hk.py  test_scheduler.py  test_signals_fred_wiring.py  test_stock_connect_adapter.py  test_store.py  test_validate_harness.py  test_validator.py  test_wishlist_w123.py  test_wishlist_w456.py
cli/: backtest.py  main.py
(+243 files in other folders)
