[project]
name = "rotation"
version = "0.1.0"
description = "Capital Rotation Monitoring System"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[project.scripts]
rotate = "rotation.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# Dependencies live in requirements.txt / requirements-dev.txt — single source
# of truth. setuptools reads them at build time via the dynamic mechanism below.
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies.dev = {file = ["requirements-dev.txt"]}

[tool.setuptools.packages.find]
where = ["src"]

# Make `import rotation` work in tests without requiring `pip install -e .`.
[tool.pytest.ini_options]
pythonpath = ["src"]
